fixing vertical alignment

--- a/docs/public/styles/site/intro.less
+++ b/docs/public/styles/site/intro.less
@@ -168,7 +168,6 @@
 	.entypo, .entypo-social {
 		font-size: 48px;
 		margin-right: 6px;
-		vertical-align: middle;
 	}
 }
 
